try to fix "Punkt hinzufügen" visual bug on mobile -v5

--- a/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
@@ -1,11 +1,10 @@
 #bugapointpanel {
-  overflow: auto;
-  height: calc(100vh - 280px);
+
 }
 
 #bugapointpanel-content {
   overflow: auto;
-  height: calc(100vh - 280px);
+  height: calc(100vh - 400px);
 }
 
 mat-expansion-panel {
